# ENSET_PFM_Agent_Building_PC

./: .env.example  README.md  app.py  app_new.py  inventory_manager.py  pyproject.toml  rapport_projet.aux  rapport_projet.out  rapport_projet.tex  rapport_projet.toc  run_app.bat  run_new_app.bat  setup_database.bat  test_discord.py  test_groq.py  test_modular_system.py  test_run.py
agents/: graph.py  nodes.py
data/: cases.csv  coolers.csv  cpus.csv  gpus.csv  motherboards.csv  psus.csv  ram.csv  storage.csv
database/: __init__.py  db_manager.py  init_db.py
evaluation/: ab_test_results_20260502_142448.json  ab_testing.py  metrics_dashboard.py  prompt_evaluation.py  results_20260502_142414.json  results_20260502_142432.json  run_evaluation.py
features/: __init__.py  build_comparator.py  build_templates.py  export_manager.py  performance_estimator.py
human_loop/: __init__.py  approval_manager.py  ui_components.py  workflow_integration.py
rag/: ingest.py
rag/chroma_db/: chroma.sqlite3
static/css/: style.css
static/js/: app.js
templates/: index.html
