[project]
name = "ecosystem-multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.8",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "mysql-connector-python>=9.1.0",
    "pandas>=3.0.2",
    "plotly>=5.24.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.11.0",
    "requests>=2.33.1",
]
